--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "description": "Fine Uploader NodeJS example server for traditional server environments",
   "dependencies": {
     "body-parser": "1.14.2",
+    "cors": "^2.8.4",
     "express": "4.13.3",
     "mkdirp": "0.5.1",
     "multiparty": "4.1.2",
